feat: update group chat api
